--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 20px;
 
     @media (min-width: $breakpoint-md) {
         flex-direction: row;
